[tool.poetry]
name = "test-alembic-and-sql-async"
version = "0.1.0"
description = ""
authors = ["Никита Дерюгин <dafun@icloud.com>"]
readme = "README.md"
packages = [{include = "test_alembic_and_sql_async"}]

[tool.poetry.dependencies]
python = "^3.9"
asyncpg = "^0.27.0"
sqlalchemy = "^2.0.5.post1"
alembic = "^1.10.2"
python-telegram-bot = "^20.1"
python-dotenv = "^1.0.0"
pydantic = "^1.10.6"
aiohttp = "^3.8.4"
pymorphy2 = "^0.9.1"
celery = "^5.2.7"
redis = "^4.5.1"
flower = "^1.2.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"
flake8-annotations = "^3.0.0"
flake8-pyproject = "^1.2.2"
flake8-docstrings = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79
include = '\.py$'
exclude = '''
(
    /(
        \.git
      | \.mypy_cache
      | env
      | ptvs_virtualenv_proxy.py
      | migrations
      | venv
    )/
)

'''

[tool.isort]
line_length = 79
skip = ["migrations/"]
profile="black"

[tool.flake8]
exclude = "manage.py, migrations/"
ignore = ["W503", "C812", "SIM106", "CCR001", "R503", "E501", "N805", "ANN101", "ANN102", "SIM119", "Q441", "ANN401", "Q443", "F405"]
